fix: use flex basis to align items in search form

--- a/style.css
+++ b/style.css
@@ -123,10 +123,10 @@ nav {
   padding: 15px;
   font-size: 18px;
   font-weight: 700;
-  width: 210px;
+  min-width: 0;
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
-  flex-grow: 1;
+  flex: 70%;
 }
 
 .search__form__marker {
@@ -140,7 +140,7 @@ nav {
   -ms-flex-align: center;
   align-items: center;
   background-color: #f2f2f2;
-  width: 45px;
+  flex: 1 0 15%;
   border-radius: 15px 0 0 15px;
 }
 
@@ -149,6 +149,7 @@ nav {
   border: none;
   background-color: #0065fc;
   border-radius: 15px;
+  flex: 1 0 15%;
 }
 
 .search__form__submit:focus {
